integration with api server

--- a/war/GroupBuy_Web_UI.html
+++ b/war/GroupBuy_Web_UI.html
@@ -25,7 +25,7 @@
 <!-- be added before this line.                -->
 <!--                                           -->
 <script type="text/javascript" language="javascript"
-	src="groupbuy_web_ui/groupbuy_web_ui.nocache.js"></script>
+	src="groupbuy_web_ui/groupbuy_web_ui.nocache.js""></script>
 <link rel="stylesheet" type="text/css" href="css/tuan_template.css">
 <link rel="stylesheet" type="text/css" href="css/tuan.css">
 </head>
