group buy widget css improvement

--- a/war/GroupBuy_Web_UI.html
+++ b/war/GroupBuy_Web_UI.html
@@ -26,6 +26,7 @@
 <!--                                           -->
 <script type="text/javascript" language="javascript"
 	src="groupbuy_web_ui/groupbuy_web_ui.nocache.js""></script>
+<link rel="stylesheet" type="text/css" href="css/base.css">
 <link rel="stylesheet" type="text/css" href="css/tuan_template.css">
 <link rel="stylesheet" type="text/css" href="css/tuan.css">
 </head>
