previous page / next page implementation

--- a/war/GroupBuy_Web_UI.html
+++ b/war/GroupBuy_Web_UI.html
@@ -28,6 +28,7 @@
 	src="groupbuy_web_ui/groupbuy_web_ui.nocache.js""></script>
 <link rel="stylesheet" type="text/css" href="css/base.css">
 <link rel="stylesheet" type="text/css" href="css/tuan_template.css">
+<link rel="stylesheet" type="text/css" href="css/wt.css">
 <link rel="stylesheet" type="text/css" href="css/tuan.css">
 </head>
 
