basic layout , tab layout

--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -12,12 +12,15 @@
 <!--                                                               -->
 <!-- Consider inlining CSS to reduce the number of requested files -->
 <!--                                                               -->
+<!-- 
 <link type="text/css" rel="stylesheet" href="GroupBuy_Web_UI.css">
+ -->
+<link type="text/css" rel="stylesheet" href="GroupBuy_Web_UI_2.css">
 
 <!--                                           -->
 <!-- Any title is fine                         -->
 <!--                                           -->
-<title>GroupBuy</title>
+<title>咕噜橙</title>
 
 <!--                                           -->
 <!-- This script loads your compiled module.   -->
@@ -26,10 +29,11 @@
 <!--                                           -->
 <script type="text/javascript" language="javascript"
 	src="groupbuy_web_ui/groupbuy_web_ui.nocache.js""></script>
-<link rel="stylesheet" type="text/css" href="css/base.css">
+	
+<!-- <link rel="stylesheet" type="text/css" href="css/base.css">
 <link rel="stylesheet" type="text/css" href="css/tuan_template.css">
 <link rel="stylesheet" type="text/css" href="css/wt.css">
-<link rel="stylesheet" type="text/css" href="css/tuan.css">
+<link rel="stylesheet" type="text/css" href="css/tuan.css"> -->
 </head>
 
 <!--                                           -->
@@ -50,7 +54,8 @@
 			application to display correctly.</div>
 	</noscript>
 
-	<div id="container">
+	<!-- v1 -->
+	<!-- 	<div id="container">
 		<div id="contentContainer" class="center clearfix Dragon_Boat"></div>
-	</div>
+	</div> -->
 </html>
