auto select city from qq api

--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -27,9 +27,16 @@
 <!-- If you add any GWT meta tags, they must   -->
 <!-- be added before this line.                -->
 <!--                                           -->
+<script language="javascript" type="text/javascript"
+	src="http://fw.qq.com/ipaddress" charset="gb2312">	
+</script>
+<script>
+var autoDetectedCity = IPData[3];
+</script>
+
 <script type="text/javascript" language="javascript"
 	src="groupbuy_web_ui/groupbuy_web_ui.nocache.js""></script>
-	
+
 <!-- <link rel="stylesheet" type="text/css" href="css/base.css">
 <link rel="stylesheet" type="text/css" href="css/tuan_template.css">
 <link rel="stylesheet" type="text/css" href="css/wt.css">
