--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -53,6 +53,9 @@ var autoDetectedCity = IPData[3];
 		body {
 		    background: url("../images/bg.jpg") repeat-x scroll 0 0 #FFFFFF !important;
 		}
+		body,p,b,dl,dd,table,td,th,img,form,div,ul,li,h1,h2,h3,h4,h5,h6{
+			 font-family:  "微软雅黑" Verdana, Arial, Tahoma;
+		}
 	</style>
 	<!-- OPTIONAL: include this if you want history support -->
 	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
