group buy widget layout improvement

--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -37,13 +37,15 @@ var autoDetectedCity = IPData[3];
 <script type="text/javascript" language="javascript"
 	src="groupbuy_web_ui/groupbuy_web_ui.nocache.js""></script>
 	
+<link rel="stylesheet" type="text/css" href="css/yipit.min.css"> 
 <link rel="stylesheet" type="text/css" href="css/common.css">
-<link rel="stylesheet" type="text/css" href="css/tuan_template.css">
-
-<!-- <link rel="stylesheet" type="text/css" href="css/base.css">
+<!-- 
+<link rel="stylesheet" type="text/css" href="css/tuan.css">
+<link rel="stylesheet" type="text/css" href="css/base.css">
 <link rel="stylesheet" type="text/css" href="css/tuan_template.css">
 <link rel="stylesheet" type="text/css" href="css/wt.css">
-<link rel="stylesheet" type="text/css" href="css/tuan.css"> -->
+<link rel="stylesheet" type="text/css" href="css/tuan.css"> 
+-->
 </head>
 
 <!--                                           -->
