--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -36,15 +36,12 @@
 <!--                                           -->
 <script type="text/javascript" src="http://fw.qq.com/ipaddress"
 	charset="gb2312">
-	
 </script>
 <script>
-	var autoDetectedCity = IPData[3];
+var autoDetectedCity = IPData[3];
 </script>
-<script type="text/javascript ">    
-
+<script type="text/javascript">  
 	function addfavorite () {
-	//var url = 'http:// www.tuan800.com';
 	var url = document.location.href;
 	var title = '咕噜团';
 	if ( document.all ) { 
@@ -70,21 +67,20 @@
 	}
 	}
 
+	//header share icon configuration
+	var jiathis_config = {
+			url : "http://itunes.apple.com/cn/app/id456494464?mt=8",
+			title : "咕噜团购，琳琅满目，团你所想，帮你推荐和订阅你想要的团购， 还等什么，试一下！",
+			showClose : true,
+			hideMore : false
+		}
 </script>
-<script type="text/javascript" language="javascript"
-	src="groupbuy_web_ui/groupbuy_web_ui.nocache.js""></script>
+<script type="text/javascript" src="groupbuy_web_ui/groupbuy_web_ui.nocache.js"></script>
 
 <link rel="stylesheet" type="text/css" href="css/yipit.min.css">
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <link rel="stylesheet" type="text/css" href="css/tuan.css">
 
-<!-- 
-<link rel="stylesheet" type="text/css" href="css/tuan.css">
-<link rel="stylesheet" type="text/css" href="css/base.css">
-<link rel="stylesheet" type="text/css" href="css/tuan_template.css">
-<link rel="stylesheet" type="text/css" href="css/wt.css">
-<link rel="stylesheet" type="text/css" href="css/tuan.css"> 
--->
 </head>
 
 <!--                                           -->
@@ -106,14 +102,6 @@
 	</noscript>
 
 	<!-- JiaThis Button BEGIN -->
-	<script type="text/javascript">
-		var jiathis_config = {
-			url : "http://itunes.apple.com/cn/app/id456494464?mt=8",
-			title : "咕噜团购，琳琅满目，团你所想，帮你推荐和订阅你想要的团购， 还等什么，试一下！",
-			showClose : true,
-			hideMore : false
-		}
-	</script>
 	<script type="text/javascript" src="http://v2.jiathis.com/code/jia.js"
 		charset="utf-8"></script>
 	<!-- JiaThis Button END -->
