--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -12,10 +12,10 @@
 <!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 <script src="js/jquery.cycle.min.js"></script>
 <script src="js/fade.js"></script>
+<link rel="stylesheet" type="text/css" href="css/city.css">
+
 <!--                                                               -->
 <!-- Consider inlining CSS to reduce the number of requested files -->
 <!--                                                               -->
@@ -34,46 +34,12 @@
 <!-- If you add any GWT meta tags, they must   -->
 <!-- be added before this line.                -->
 <!--                                           -->
+<script type="text/javascript" src="js/tuan.js"></script>
 <script type="text/javascript" src="http://fw.qq.com/ipaddress"
 	charset="gb2312">
 </script>
 <script>
 var autoDetectedCity = IPData[3];
-</script>
-<script type="text/javascript">  
-	function addfavorite () {
-	var url = document.location.href;
-	var title = '咕噜团';
-	if ( document.all ) { 
-		try {
-		window.external.addFavorite(url, title);
-	}
-	
-	catch  (e1 ) {
-		try { window.external.addToFavoritesBar(url, title);
-		
-	}
-	catch  (e2 ) {
-		alert ('加入收藏失败，请您手工加入。')
-	}
-	}
-	}
-	else if  (window.external ) {
-	window .sidebar.addPanel(title, url,"");
-	}
-	
-	else {
-		alert ('加入收藏失败，请您手工加入。')
-	}
-	}
-
-	//header share icon configuration
-	var jiathis_config = {
-			url : "http://itunes.apple.com/cn/app/id456494464?mt=8",
-			title : "咕噜团购，琳琅满目，团你所想，帮你推荐和订阅你想要的团购， 还等什么，试一下！",
-			showClose : true,
-			hideMore : false
-		}
 </script>
 <script type="text/javascript" src="groupbuy_web_ui/groupbuy_web_ui.nocache.js"></script>
 
@@ -104,6 +70,17 @@ var autoDetectedCity = IPData[3];
 	<script type="text/javascript" src="http://v2.jiathis.com/code/jia.js"
 		charset="utf-8"></script>
 	<!-- JiaThis Button END -->
+
+	<script>
+	//header share icon configuration
+	var jiathis_config = {
+		url : "http://itunes.apple.com/cn/app/id456494464?mt=8",
+		title : "咕噜团购，琳琅满目，团你所想，帮你推荐和订阅你想要的团购， 还等什么，试一下！",
+		showClose : true,
+		hideMore : false
+	}
+	
+	</script>
 
 	<div id="go_lstop" class="uptop">
 		<a onclick="window.scrollTo(0,0);"> <img
