add return count json parser for pager.

--- a/src/main/webapp/contact.html
+++ b/src/main/webapp/contact.html
@@ -17,7 +17,7 @@
 						</tr>
 						<tr>
 							<td><div class="contact_lian_left">
-							广州市柑橙科技有限公司<br>
+							广州市甘橙科技有限公司<br>
 							电 话：020-xxxx<br>
 							地 址：广州市越秀区<br>
 							邮 编：510000 </div></td>
