--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -8,13 +8,6 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link href="css/styles.css" rel="stylesheet" type="text/css" />
-<!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-<script src="js/jquery.cycle.min.js"></script>
-<script src="js/fade.js"></script>
-<link rel="stylesheet" type="text/css" href="css/city.css">
 
 <!--                                                               -->
 <!-- Consider inlining CSS to reduce the number of requested files -->
@@ -22,11 +15,13 @@
 <!-- 
 <link type="text/css" rel="stylesheet" href="GroupBuy_Web_UI.css">
  -->
-<link type="text/css" rel="stylesheet" href="GroupBuy_Web_UI_2.css">
+<link rel="stylesheet" type="text/css"  href="GroupBuy_Web_UI_2.css">
+<link rel="stylesheet" type="text/css" href="css/styles.css">
+<link rel="stylesheet" type="text/css" href="css/city.css">
+<link rel="stylesheet" type="text/css" href="css/yipit.min.css">
+<link rel="stylesheet" type="text/css" href="css/common.css">
+<link rel="stylesheet" type="text/css" href="css/tuan.css">
 
-<!--                                           -->
-<!-- Any title is fine                         -->
-<!--                                           -->
 <title>咕噜橙</title>
 
 <!--                                           -->
@@ -35,16 +30,17 @@
 <!-- be added before this line.                -->
 <!--                                           -->
 <script type="text/javascript" src="js/tuan.js"></script>
-<script type="text/javascript" src="http://fw.qq.com/ipaddress"
-	charset="gb2312">
-</script>
+<script type="text/javascript" src="http://fw.qq.com/ipaddress" charset="gb2312"></script>
 <script>
 var autoDetectedCity = IPData[3];
 </script>
 <script type="text/javascript" src="groupbuy_web_ui/groupbuy_web_ui.nocache.js"></script>
-<link rel="stylesheet" type="text/css" href="css/yipit.min.css">
-<link rel="stylesheet" type="text/css" href="css/common.css">
-<link rel="stylesheet" type="text/css" href="css/tuan.css">
+<!--[if lt IE 9]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+<script src="js/jquery.cycle.min.js"></script>
+<script src="js/fade.js"></script>
+
 </head>
 
 <!--                                           -->
