style improvement, back to top, search button

--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <link rel="stylesheet" type="text/css" href="css/tuan.css">
 
-<title>咕噜橙</title>
+<title>咕噜团</title>
 
 <!--                                           -->
 <!-- This script loads your compiled module.   -->
@@ -74,12 +74,13 @@ var autoDetectedCity = IPData[3];
 		showClose : true,
 		hideMore : false
 	}
-	
 	</script>
 
-	<div id="go_lstop" class="uptop">
+<!-- 	<div id="go_lstop" class="uptop">
 		<a onclick="window.scrollTo(0,0);"> <img
 			src="css/img/uptop_cion_blue.png" />
 		</a>
-	</div>
+	</div> -->
+	<div style="display:none" id="goTopBtn">回到顶部</div>
+	<script type="text/javascript">goTopEx();</script>
 </html>
