--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -49,6 +49,11 @@ var autoDetectedCity = IPData[3];
 <!-- to create a completely dynamic UI.        -->
 <!--                                           -->
 <body>
+	<style>
+		body {
+		    background: url("../images/bg.jpg") repeat-x scroll 0 0 #FFFFFF;
+		}
+	</style>
 	<!-- OPTIONAL: include this if you want history support -->
 	<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1'
 		style="position: absolute; width: 0; height: 0; border: 0"></iframe>
