--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -51,7 +51,7 @@ var autoDetectedCity = IPData[3];
 <body>
 	<style>
 		body {
-		    background: url("../images/bg.jpg") repeat-x scroll 0 0 #FFFFFF;
+		    background: url("../images/bg.jpg") repeat-x scroll 0 0 #FFFFFF !important;
 		}
 	</style>
 	<!-- OPTIONAL: include this if you want history support -->
