--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -38,14 +38,12 @@ var autoDetectedCity = IPData[3];
 <!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-<script src="js/jquery.cycle.min.js"></script>
-<script src="js/fade.js"></script>
 <style>
 		body {
 		    background: url("../images/bg.jpg") repeat-x scroll 0 0 #FFFFFF !important;
 		}
 		body,p,b,dl,dd,table,td,th,img,form,div,ul,li,h1,h2,h3,h4,h5,h6{
-			 font-family:  "微软雅黑" Verdana, Arial, Tahoma;
+			 font-family: "微软雅黑" Verdana, Arial, Tahoma !important;
 		}
 	</style>
 </head>
