--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" type="text/css" href="css/common.css">
 <link rel="stylesheet" type="text/css" href="css/tuan.css">
 
-<title>咕噜团</title>
+<title>甘橙团购</title>
 
 <!--                                           -->
 <!-- This script loads your compiled module.   -->
@@ -43,7 +43,7 @@ var autoDetectedCity = IPData[3];
 		    background: url("../images/bg.jpg") repeat-x scroll 0 0 #FFFFFF !important;
 		}
 		body,p,b,dl,dd,table,td,th,img,form,div,ul,li,h1,h2,h3,h4,h5,h6{
-			 font-family: "微软雅黑" Verdana, Arial, Tahoma !important;
+			 font-family: "微软雅黑" Verdana, Arial, Tahoma,  Sans-Serif !important;
 		}
 	</style>
 </head>
