--- a/src/main/webapp/GroupBuy_Web_UI.html
+++ b/src/main/webapp/GroupBuy_Web_UI.html
@@ -8,7 +8,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
+<meta name="description" content="甘橙团购为您提供最新最精的团购活动信息，为您分析跟踪所有团购活动 团购网站,帮您发掘最省钱最有保障的团购活动信息">
 <!--                                                               -->
 <!-- Consider inlining CSS to reduce the number of requested files -->
 <!--                                                               -->
